# Demo-Peluqueria

./: .dockerignore  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  fluentia-agente-whatsapp-arquitectura.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 31fc080423a5_initial_schema.py
app/: __init__.py  audit.py  config.py  crypto.py  database.py  main.py  notifications.py  reminders.py  retention.py  security.py  sessions.py  timez.py  totp.py  waitlist.py
app/agent/: __init__.py  context.py  flow.py  handler.py  llm.py  nlu.py  prefilter.py  qa.py  replies.py  routing.py
app/api/: admin.py  agent.py  auth.py  metrics.py  reports.py  webhook.py
app/integrations/: whatsapp.py
app/metrics/: __init__.py  cost.py  service.py
app/models/: __init__.py  appointment.py  associations.py  audit_log.py  base.py  business.py  closure.py  conversation.py  customer.py  event_log.py  inbound_message.py  resource.py  service.py  time_off.py  types.py  waitlist.py
app/reporting/: __init__.py  service.py
app/schemas/: agent.py  appointment.py  audit.py  business.py  conversation.py  metrics.py  reports.py  schedule.py  service.py  session.py  validators.py  waitlist.py
app/tools/: __init__.py  availability.py  booking.py  capacity.py  pricing.py  scheduling.py  waitlist.py
docs/: ARCHITECTURE.md  SECURITY.md
frontend/: agenda.html  ajustes.html  calendario.html  clientes.html  espera.html  facturacion.html  index.html  manifest.webmanifest  privacidad.html  servicios.html  sw.js
frontend/css/: panel.css
marketing/: fluentia-recepcionista.html
scripts/: encrypt_pii.py  fill_waitlist.py  hash_key.py  purge_old.py  seed.py  seed_demo.py  send_alerts.py  send_reminders.py
tests/: conftest.py  test_agent.py  test_api.py  test_api_extensions.py  test_appointment_status.py  test_audit.py  test_availability.py  test_booking.py  test_calendar.py  test_context_cache.py  test_cost_optim.py  test_crypto.py  test_extensions.py  test_flow.py  test_handler.py  test_hardening.py  test_input_validation.py  test_metrics.py  test_models.py  test_reliability.py  test_reminders.py  test_reporting.py  test_security.py  test_session.py  test_sqli.py  test_waitlist.py  test_webhook.py
(+9 files in other folders)
